styles.css
/* ... */
@media (max-width:720px) {
  .question {
    font-size: 1.125rem;
  }
  .faq__answers {
    font-size: 15px;
  }
  
}


@media (max-width:700px) {
  .footer__container {
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }
}

@media (max-width:682px) {
  .faq__answers {
    transform: translateY(90%);
  }
}


@media (max-width:640px) {
  body {
    overflow-x: hidden;
  }
  .plan__price {
    font-size: 2.25rem;
  }
  .section__subtitle {
    text-align: center;
    font-size: 2.25rem;
  }
  .features {
    flex-direction: column;
  }

  .features {
    flex-direction: column;
    align-items: center;
  }
  .features__img {
    margin-right: 0;
  } 
  .features__info-wrapper {
    text-align: center;
    margin-top: 12px;
  }
  .features__info-para {
    text-align: center;
  }
  .getstarted__button-container {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 20px;
  }
  .getstarted__container-main {
    padding: 4rem 2rem;
  }
  .getstarted__title {
    font-size: 20px;
    width: 100%;
  }
  .getstarted__button-1,
  .getstarted__button-2 {
    padding: 0.75rem 1.5rem;
    font-size: 0.875rem;
  }
  .testimonial__users {
    flex-direction: column;
  }
  .testimonial__user-info {
    justify-content: center;
    margin-bottom: 1rem;
  }
}

@media (max-width:552px) {
  .question__container:hover {
    padding-bottom: 12rem;
  }
}

@media (max-width:390px) {
  .question__container:hover {
    padding-bottom: 14rem;
  }
  .faq__answers {
    transform: translateY(86%);
  }
}

